# security-ai-lab

./: .gitignore  README.md  SECURITY.md
.bootstrap/: source.part00
bas-executor/: .env.example  .gitignore  README.md  pyproject.toml
bas-executor/engagements/: active.example.yaml
bas-executor/executor/: __init__.py  auth.py  config.py  main.py  models.py  registry.py  runtime.py  scope.py
bas-executor/scripts/: signed_request.py
bas-executor/secrets/: credentials.example.yaml
bas-executor/systemd/: bas-executor.service
bas-executor/tests/: test_registry.py  test_runtime.py  test_scope.py
docs/: AUDIT_2026-06-23.md  CHANGELOG.md  GETTING_STARTED_ID.md  TESTING.md  (+2 more)
security-agent/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
security-agent/app/: __init__.py  agent.py  auth.py  config.py  db.py  llm.py  main.py  mcp_bridge.py  policy.py  rag.py  schemas.py  skills.py  tools.py  web.py  web_auth.py
security-agent/connectors/: mcp.yaml
security-agent/docs/: deployment.md  report-template.md  roe.md  sop.md  tool-inventory.md
security-agent/knowledge/: README.md  triage-baseline.md
security-agent/policies/: default.yaml
security-agent/proxy/: Caddyfile
security-agent/scripts/: hash_web_password.py  verify_web_password.py
security-agent/skills/ad-assessment/: SKILL.md  manifest.yaml
security-agent/skills/bas-shell-execution/: SKILL.md  manifest.yaml
security-agent/skills/caldera-operations/: SKILL.md  manifest.yaml
security-agent/skills/purple-team-validation/: SKILL.md  manifest.yaml
security-agent/tests/: test_auth.py  test_db.py  test_llm.py  test_mcp_bridge.py  test_policy.py  test_rag.py  test_web_auth.py  test_web_router.py
security-agent/web/: index.html
security-agent/web/assets/: app.css  app.js
(+5 files in other folders)
