[project]
name = "bas-executor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "PyYAML>=6.0,<7",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["executor"]

[tool.pytest.ini_options]
pythonpath = ["."]
