[project]
name = "security-agent"
version = "0.3.0"
description = "Resource-efficient internal security agent for SOC, red team, and GRC workflows"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "mcp>=1.28,<1.29",
  "pypdf>=5,<7",
  "pydantic-settings>=2.7,<3",
  "PyYAML>=6.0,<7",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
